展示省市区，未成功

--- a/meiduo_mall/meiduo_mall/static/index.html
+++ b/meiduo_mall/meiduo_mall/static/index.html
@@ -569,6 +569,6 @@
 	</div>
 	<script type="text/javascript" src="/static/js/slide.js"></script>
 	<script type="text/javascript" src="/static/js/common.js"></script>
-	<script type="text/javascript" src="/static/js/index.js"></script>
+	<script type="text/javascript" src="{{ static ('js/index.js') }}"></script>
 </body>
 </html>
